--- a/yt/pubspec.yaml
+++ b/yt/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cached_network_image: ^3.4.1
   video_player: ^2.9.3
   camera: ^0.11.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
